# cuda-cmake

./: .gitignore  CMakeLists.txt  README.md
cpu/: cpu.cc  cpu.h
cuda/: kernel.cu  kernel.cuh
src/: main.cc
